--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
     <div class="row">
         <div class="col-md-6">
             <button onclick="load_eu();">Load EU</button>
+            <button onclick="load_pl();">Load PL</button>
         </div>
         <div class="col-md-6">
             <input id="example">
