--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
           integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
@@ -54,7 +55,9 @@
                     <h3 class="panel-title">Results of the query</h3>
                     I think I'm done.
                     Below are the results of posing the query to the endpoint.
-                    If there is something that should not be there, click X to remove it
+                    If there is something that should not be there, click <span
+                        class="glyphicon glyphicon-remove"></span> to
+                    remove it
                 </div>
                 <div class="panel-body" id="results">
                 </div>
