Disabling refine during the processing

--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
                 <div class="panel-footer">
                     <div class="input-group">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" onclick="do_step();">Refine query</button>
+                            <button class="btn btn-default" id="refine_query_btn" onclick="do_step();">Refine query</button>
                             <button class="btn btn-default" onclick="restart();">Restart</button>
                         </div>
                     </div>
