--- a/html/index.html
+++ b/html/index.html
@@ -135,5 +135,17 @@
         </div>
     </div>
 </div>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">
+            Developed at <a href="http://fc.put.poznan.pl/">Faculty of Computing, Poznan University of Technology</a>
+            using <a href="getbootstrap.com">Bootstrap</a> with <a
+                href="http://glyphicons.com/">Glyphicons</a>, <a href="https://jquery.com/">jQuery</a> and <a
+                href="http://pycnic.nullism.com/">Pycnic</a>.
+            The source code is available in the <a href="https://bitbucket.org/jpotoniec/kretr">repository</a>.
+        </p>
+    </div>
+</footer>
+
 </body>
 </html>
